# CryptoApplicationAPI

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_26_1656-2e0797256e03_initialization.py  2024_07_27_1557-e83390f2b642_updated_users_table.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
nginx/: Dockerfile  nginx.conf
scripts/: alembic.sh
src/: __main__.py  app_object.py  database.py  router.py  utils.py
src/application/: auth_utils.py  token_type.py  utils.py
src/application/repositories/: __init__.py  i_user_repository.py
src/application/schemas/: __init__.py  token.py  user_create_data.py  user_data.py  user_return_data.py
src/application/services/: __init__.py  auth_service.py  user_service.py
src/application/utils/: token_utils.py
src/auth/: __init__.py  auth.py  dependencies.py  manager.py  router.py  utils.py
src/auth/models/: user.py
src/auth/routers/: __init__.py  login_router.py  register_router.py
src/auth/schemas/: __init__.py  token_data.py  user_create.py  user_data.py  user_read.py  user_return_data.py  user_update.py
src/auth/services/: __init__.py  user_service.py
src/config/: __init__.py  config.py
src/entities/: __init__.py
src/entities/models/: user.py
src/infrastructure/: __init__.py  database.py  get_service.py
src/infrastructure/presentation/: __init__.py  app.py  catch_exception_middleware.py
src/infrastructure/repositories/: __init__.py  user_repository.py
src/middlewares/: __init__.py
src/models/: user.py
src/routers/: login_router.py  register_router.py
src/schemas/: __init__.py  token.py  user_return_data.py  user_update.py
src/services/: user_service.py
tests/unit/: conftest.py
tests/unit/auth_service_tests/: test_correct_cases.py  test_exception_cases.py
tests/unit/mocks/: environment.py  mock_user_repository.py  users_list.py
tests/unit/user_service_tests/: test_correct_cases.py  test_exception_cases.py
(+10 files in other folders)
