[tool.poetry]
name = "metroalarmserverauth"
version = "0.1.0"
description = "FastAPI server for Metro Alarm application (auth microservice)"
authors = ["qiisqwww <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.1"}
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
requests = "^2.32.3"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
